[gd_scene load_steps=3 format=3 uid="uid://duljacbpentv2"]

[ext_resource type="Script" path="res://scenes/world/ui_element/ui.gd" id="1_2jqio"]
[ext_resource type="Script" path="res://scenes/world/ui_element/midline.gd" id="1_c7hyb"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_2jqio")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7hyb")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="P1ScoreLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"

[node name="Spacer" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "                   "

[node name="P2ScoreLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"

[node name="PauseScreen" type="Panel" parent="Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseScreen/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Control/PauseScreen/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Control/PauseScreen/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Control/PauseScreen/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
